# stock_screener

./: .pre-commit-config.yaml  Makefile  async_fetcher.py  config.py  data_manager.py  main.py  main_integrated.py  metrics.py  parallel_processor.py  pyproject.toml  pytest.ini  screener_engine.py  setup.cfg  streamlit_app.py  tox.ini  validators.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: principles_refactor.md  principles_tests.md  specification.md
tests/: conftest.py  test_config.py  test_data_manager.py  test_metrics.py  test_screener_engine.py  test_validators.py
